@@ -8,6 +8,7 @@
 6. Fix Qt only compile.
 7. Fix inner border of some buttons in OpenOffice.org
 8. Use QtCurve's icons for dock widget buttons.
+9. Use same button shape for dock widget buttons as per window buttons.
 
 0.69.0
 ------
